--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>GG Chatbox AI</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="chatbox.js"></script>
   <link rel="stylesheet" type="text/css" href="chatbox.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
