add intent explination. Shorten api message delay

--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
 </div>
 <!-- end copied code -->
 
+<div class="container">
+    <div class="row">
+        <h3>Current intents handled:</h3>
+        <ul>
+            <li>Asking about pricing</li>
+        </ul>
+    </div>
+</div>
+
 </body>
 </html>
