--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 <!-- end copied code -->
 
 <div class="container">
+    <br>Response<br> <textarea id="debug-response" cols="40" rows="20"></textarea>
+  </div>
+
+<div class="container">
     <div class="row">
         <h3>Current intents handled:</h3>
         <ul>
